--- a/blog/themes/volantis/layout/_widget/blogger.ejs
+++ b/blog/themes/volantis/layout/_widget/blogger.ejs
@@ -21,8 +21,7 @@
           <%- markdown(item.subtitle) %>
         <% } %>
         <% if (item.jinrishici){ %>
-          <p><span id="jinrishici-sentence"><%- item.jinrishici != true ? item.jinrishici : config.title %></span></p>
-          <script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
+          <p>渴望被认同的怪兽</p>
         <% } %>
       </div>
     <% } %>
